Windows; minor edits

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		<li><a title="How the app works" class="menu__item" href="#how">How it works</a></li>
 		<li><a title="Strategies to avoid mistakes in chess" class="menu__item" href="#avoid">Avoid Blunders</a></li>
 		<li><a title="About the chess software" class="menu__item" href="#about">About</a></li>
-		<li><a title="Email of the developer" class="menu__item" href="mailto:chessblundertrainer@gmail.com">Contact</a></li>
+		<li><a title="Email the developer" class="menu__item" href="mailto:chessblundertrainer@gmail.com">Contact</a></li>
 		<li><a title="Github" class="menu__item" href="https://github.com/Mercutio1243/chessblundertrainerapp">Github</a></li>
 		<li><a title="Privacy" class="menu__item" href="https://www.privacypolicies.com/live/c6d58317-e1ab-4292-8f11-71ea6ce60474">Privacy</a></li>
 	</ul>
@@ -78,7 +78,7 @@
 					<a title="How to avoid blunders by creating puzzles" href="content/image/chess_blunder_trainer_software_puzzles.jpg" class="lightbox">
 						<img src="content/image/chess_blunder_trainer_software_puzzles.jpg" class="app__screenshot" alt="Avoid repeating your past blunders" />
 					</a>
-					<a title="How to improve chess skills with the app" href="content/image/chess_blunder_trainer_tool_import_your_games.jpg" class="lightbox">
+					<a title="How to improve chess skills with the Chess Blunder Trainer" href="content/image/chess_blunder_trainer_tool_import_your_games.jpg" class="lightbox">
 						<img src="content/image/chess_blunder_trainer_tool_import_your_games.jpg" class="app__screenshot" alt="Import offline games and online games from chess.com or Lichess" />
 					</a>
 					<a title="How to prevent mistakes by reviewing past mistakes" href="content/image/chess_blunder_trainer_import_blunders_chesscom.jpg" class="lightbox">
@@ -91,47 +91,43 @@
 			<h2 class="app__section-title">How the App Works</h2>
 			<div class="app__fulldescription-content">
 				<ol>
-					<li><strong>Easily import</strong> your own chess games from various (online) sources such as chess.com or Lichess, or from your personal PGN files.</li>
-					<li><strong>Replay</strong> your blunders as personalized puzzles from your games and find better moves.</li>
-					<li><strong>Get support</strong> from the app in assessing your moves and recommendations of best moves based on chess engine evaluations.</li>
-					<li><strong>Learn</strong> from your blunders and improve your chess skills!</li>
-					<li><strong>Enjoy</strong> the app free and without ads.</li>
+					<li><strong>Install</strong> the app on your <strong>Android</strong> smartphone or <strong>Windows via Google Play Games</strong> from the links below.</li>
+					<li><strong>Easily import</strong> your <strong>own chess games</strong> from various (online) sources such as chess.com or Lichess, or from your personal PGN files.</li>
+					<li><strong>Replay</strong> your blunders as <strong>personalized puzzles</strong> from your games and train to spot better moves.</li>
+					<li><strong>Let the app support you</strong> in assessing your moves and get recommendations from the chess engine.</li>
+					<li><strong>Learn</strong> from your <strong>blunders</strong> and improve your chess skills!</li>
+					<li><strong>Enjoy</strong> the app <strong>completely free</strong> and without ads.</li>
 					<p> </p>
 				</ol>
 			</div>
 			<div class="app__buttons app__buttons--desktop">
 				<a href="https://play.google.com/store/apps/details?id&#x3D;com.cbt.chess_blunder_trainer" onclick="trackPlayStoreLinkClick('Visit Play Store Desktop')" class="app__button-play" target="_blank" title="Get on Google Play">
-					<img src="assets/google-play-badge.png" alt="Get on Google Play">
+					<img src="assets/google-play-badge.png" alt="Get on Google Play for Android smartphones and for Windows">
 				</a>
 			</div>
 			<div class="app__buttons app__buttons--mobile container">
 				<a href="https://play.google.com/store/apps/details?id&#x3D;com.cbt.chess_blunder_trainer" onclick="trackPlayStoreLinkClick('Visit Play Store Mobile')" class="app__button-play" target="_blank" title="Get on Google Play">
-					<img src="assets/google-play-badge.png" alt="Get on Google Play">
+					<img src="assets/google-play-badge.png" alt="Get on Google Play for Android smartphones and for Windows">
 				</a>
 			</div>
 		</section>
 		<section id="avoid" class="app__fulldescription app__section container">
 			<h2 class="app__section-title">Strategies to Avoid Blunders</h2>
 			<div class="app__fulldescription-content">
-				<p>While the chess blunder trainer app helps you to learn from your own blunders in past games, you will also need routines to avoid blunders in the first place. One proven approach is the <strong>Checks, Captures, and Threats (CCT)</strong> rule:</p>
+				<p>While the chess blunder trainer app helps you to learn from your own blunders in your played games, you will also need routines to avoid blunders in the first place. One proven approach is the <strong>Checks, Captures, and Threats (CCT)</strong> rule:</p>
 				<ul>
 					<li><strong>Checks:</strong> Check all checks that you can deliver to the opponent's king. Often, checks that do not seem to lead to anything, on closer inspection can open new ways of attack.</li>
 					<li><strong>Captures:</strong> Examine all possible captures of enemy pieces. Sometimes, a capture can open up the board or remove a key defender, leading to a more favorable position.</li>
 					<li><strong>Threats:</strong> Identify all threats you can make. A threat could be anything from threatening to win material in the next move to creating a strong positional advantage. It forces the opponent to react, e.g., by moving pieces, and may open new attack vectors.</li>
-				</ul>
-				<p>In addition, make sure that you do not focus exclusively on your own strategy but actively take the opponent into account.</p>
-				<ul>
-					<li><strong>Understand the opponent's plan:</strong> Look at your opponent's last move and ask yourself, "Why did they make this move? What has changed in the position? What are they going to do next?"</li>
-					<li><strong>Identify immediate threats:</strong> Use the CCT rule from your opponent's viewpoint to anticipate possible checks, captures, and threats. Make sure that have a counter to each of these moves, particularly if you are playing within opponent's half of the board.</li>
-					<li><strong>Handle time pressure:</strong> When in time pressure, aim to simplify the position: exchange pieces to reduce complications, avoid overly complicated calculations</li>
+					<li><strong>Take opponent's perspective:</strong> Use the CCT rule from your opponent's viewpoint to anticipate possible checks, captures, and threats. Plan for each of these moves.</li>
 				</ul>
 			</div>
 		</section>
 		<section id="about" class="app__fulldescription app__section container">
 			<h2 class="app__section-title">About</h2>
 			<div class="app__fulldescription-content">
-				<p>This chess software was developed as a personal project by Thomas Koeppen. The tool is available as a free Android app in the Google Play Store. Please reach out via <a title="Email address of app developer" href="mailto:chessblundertrainer@gmail.com">chessblundertrainer@gmail.com</a> with any feedback or questions!</p>
-				<p>Special thanks to <a title="Developer of external flutter packages used in this chess app" href="https://sandeducator.dev/">Alex Baker</a>, who published the chess logic package <a title="Flutter bishop package" href="https://pub.dev/packages/bishop">bishop</a> and the chessboard visualization package <a title="Flutter squares package" href="https://pub.dev/packages/squares">squares</a> for flutter. Without those, this app would not have been possible.</p>
+				<p>This chess software was developed as a personal project by Thomas Koeppen. The tool is available as a free Android and Windows app in the Google Play Store. Please reach out via <a title="Email address of app developer" href="mailto:chessblundertrainer@gmail.com">chessblundertrainer@gmail.com</a> with any feedback or questions!</p>
+				<p>Special thanks to <a title="Developer of external flutter packages used in this chess app" href="https://sandeducator.dev/">Alex Baker</a>, who has published the chess logic package <a title="Flutter bishop package" href="https://pub.dev/packages/bishop">bishop</a> and the chessboard package <a title="Flutter squares package" href="https://pub.dev/packages/squares">squares</a> for flutter. Without those, this app would not have been possible.</p>
 			</div>
 
 			<div class="app__buttons app__buttons--desktop">
@@ -210,6 +206,18 @@
 	<script>
 		document.addEventListener('DOMContentLoaded', function () {
 			const globalReleaseNotes = [
+				  {
+    'version': 'v1.9.3',
+    'notes': 'Minor fixes and improvements',
+  },
+  {
+    'version': 'v1.9.2',
+    'notes': 'Minor fixes and improvements',
+  },
+  {
+    'version': 'v1.9.1',
+    'notes': 'Improvement of feedback dialog',
+  },
 				{
 					'version': 'v1.9.0',
 					'notes': 'Improvement of feedback requests',
