Included links in bullets

--- a/index.html
+++ b/index.html
@@ -91,7 +91,23 @@
 			<h2 class="app__section-title">How the App Works</h2>
 			<div class="app__fulldescription-content">
 				<ol>
-					<li><strong>Install</strong> the app on your <strong>Android</strong> smartphone or <strong>Windows via Google Play Games</strong> from the links below.</li>
+					<li>
+						<strong>Install</strong> the app on your 
+						<a href="https://play.google.com/store/apps/details?id=com.cbt.chess_blunder_trainer" 
+						   onclick="trackPlayStoreLinkClick('Visit Play Store Android')" 
+						   class="app__button-play" 
+						   target="_blank" 
+						   title="Get on Google Play">
+						   <strong>Android</strong>
+						</a> smartphone or 
+						<a href="https://play.google.com/store/apps/details?id=com.cbt.chess_blunder_trainer" 
+						   onclick="trackPlayStoreLinkClick('Visit Play Store Windows')" 
+						   class="app__button-play" 
+						   target="_blank" 
+						   title="Get on Google Play">
+						   <strong>Windows via Google Play Games</strong>
+						</a> from the links.
+					  </li>
 					<li><strong>Easily import</strong> your <strong>own chess games</strong> from various (online) sources such as chess.com or Lichess, or from your personal PGN files.</li>
 					<li><strong>Replay</strong> your blunders as <strong>personalized puzzles</strong> from your games and train to spot better moves.</li>
 					<li><strong>Let the app support you</strong> in assessing your moves and get recommendations from the chess engine.</li>
