--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
 			<div class="app__fulldescription-content">
 				<p>While the chess blunder trainer app helps you to learn from your own blunders in your played games, you will also need routines to avoid blunders in the first place. One proven approach is the <strong>Checks, Captures, and Threats (CCT)</strong> rule:</p>
 				<ul>
-					<li><strong>Checks:</strong> Check all checks that you can deliver to the opponent's king. Often, checks that do not seem to lead to anything, on closer inspection can open new ways of attack.</li>
-					<li><strong>Captures:</strong> Examine all possible captures of enemy pieces. Sometimes, a capture can open up the board or remove a key defender, leading to a more favorable position.</li>
+					<li><strong>Checks:</strong> Check all checks that you can deliver to the opponent's king. Even checks that do not seem to lead to anything at first glance can open follow-up attacks on closer inspection.</li>
+					<li><strong>Captures:</strong> Examine all possible captures of enemy pieces. Sometimes, a capture can open up the board or remove a key defender, leading to follow-up attacks.</li>
 					<li><strong>Threats:</strong> Identify all threats you can make. A threat could be anything from threatening to win material in the next move to creating a strong positional advantage. It forces the opponent to react, e.g., by moving pieces, and may open new attack vectors.</li>
 					<li><strong>Take opponent's perspective:</strong> Use the CCT rule from your opponent's viewpoint to anticipate possible checks, captures, and threats. Plan for each of these moves.</li>
 				</ul>
