--- a/index.html
+++ b/index.html
@@ -35,16 +35,18 @@
 		<span></span>
 	</label>
 
-	<ul class="menu__box">
-		<li><a title="Chess Blunder Trainer" class="menu__item" href="#header">Home</a></li>
-		<li><a title="How the app looks like" class="menu__item" href="#screenshots">Screenshots</a></li>
-		<li><a title="How the app works" class="menu__item" href="#how">How it works</a></li>
-		<li><a title="Strategies to avoid mistakes in chess" class="menu__item" href="#avoid">Avoid Blunders</a></li>
-		<li><a title="About the chess software" class="menu__item" href="#about">About</a></li>
-		<li><a title="Email the developer" class="menu__item" href="mailto:chessblundertrainer@gmail.com">Contact</a></li>
-		<li><a title="Github" class="menu__item" href="https://github.com/Mercutio1243/chessblundertrainerapp">Github</a></li>
-		<li><a title="Privacy" class="menu__item" href="https://www.privacypolicies.com/live/c6d58317-e1ab-4292-8f11-71ea6ce60474">Privacy</a></li>
-	</ul>
+<ul class="menu__box">
+	<li><a title="Chess Blunder Trainer" class="menu__item" href="#header">Home</a></li>
+	<li><a title="Video walkthrough of the app" class="menu__item" href="#video">Video Introduction</a></li>
+	<li><a title="How the app looks like" class="menu__item" href="#screenshots">Screenshots</a></li>
+	<li><a title="How the app works" class="menu__item" href="#how">How it works</a></li>
+	<li><a title="Strategies to avoid mistakes in chess" class="menu__item" href="#avoid">Avoid Blunders</a></li>
+	<li><a title="About the chess software" class="menu__item" href="#about">About</a></li>
+	<li><a title="Email the developer" class="menu__item" href="mailto:chessblundertrainer@gmail.com">Contact</a></li>
+	<li><a title="Github" class="menu__item" href="https://github.com/Mercutio1243/chessblundertrainerapp">Github</a></li>
+	<li><a title="Privacy" class="menu__item" href="https://www.privacypolicies.com/live/c6d58317-e1ab-4292-8f11-71ea6ce60474">Privacy</a></li>
+</ul>
+
 </div>
 
 <body>
@@ -66,6 +68,22 @@
 				<img src="assets/google-play-badge.png" alt="Get on Google Play">
 			</a>
 		</div>
+		<section id="video" class="app__video app__section">
+	<div class="container">
+		<h2 class="app__section-title">Video Introduction</h2>
+		<div class="app__video-wrapper" style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%;">
+			<iframe 
+				src="https://www.youtube.com/embed/1SZTfkJx-Fk" 
+				title="Video Introduction to the Chess Blunder Trainer App" 
+				frameborder="0" 
+				allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+				allowfullscreen 
+				style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;">
+			</iframe>
+		</div>
+	</div>
+</section>
+
 		<section id="screenshots" class="app__screenshots app__section">
 			<div class="container">
 				<h2 class="app__section-title">Screenshots</h2>
@@ -111,7 +129,7 @@
 					<li><strong>Replay</strong> your blunders as <strong>personalized puzzles</strong> from your games and train to spot better moves.</li>
 					<li><strong>Let the app support you</strong> in assessing your moves and get recommendations from the chess engine.</li>
 					<li><strong>Learn</strong> from your <strong>blunders</strong> and improve your chess skills!</li>
-					<li><strong>Enjoy</strong> the app <strong>completely free</strong> and without ads.</li>
+					<li><strong>Improve</strong> your chess game <strong>completely for free</strong> and without ads.</li>
 					<p> </p>
 				</ol>
 			</div>
