--- a/index.html
+++ b/index.html
@@ -67,22 +67,22 @@
 		<h1 class="app__name">Chess Blunder Trainer App</h1>
 		<p class="app__description">Replay blunders from your own chess games to improve your chess skills!</p>
 		<div class="app__buttons app__buttons--desktop">
-			<a href="https://play.google.com/store/apps/details?id=com.cbt.chess_blunder_trainer" onclick="trackPlayStoreLinkClick('Visit Play Store Desktop')" class="app__button-play" target="_blank" title="Get on Google Play">
-				<img class="app__badge" src="assets/google-play-badge.png" alt="Get on Google Play">
+			<a href="https://play.google.com/store/apps/details?id=com.cbt.chess_blunder_trainer" onclick="trackPlayStoreLinkClick('Visit Play Store Android Desktop 1')" class="app__button-play" target="_blank" title="Get on Google Play">
+				<img class="app__badge" src="assets/google-play-badge.png" alt="Get the app on Google Play for Android smartphones">
 			</a>
-			<a href="https://play.google.com/store/apps/details?id=com.cbt.chess_blunder_trainer" onclick="trackPlayStoreLinkClick('Visit Play Store Windows')" class="app__button-play" target="_blank" title="Get on Google Play for Windows">
-				<img class="app__badge" src="assets/Windows_badge.png" alt="Get on Google Play for Windows">
+			<a href="https://play.google.com/store/apps/details?id=com.cbt.chess_blunder_trainer" onclick="trackPlayStoreLinkClick('Visit Play Store Windows Desktop 1')" class="app__button-play" target="_blank" title="Get on Google Play for Windows">
+				<img class="app__badge" src="assets/Windows_badge.png" alt="Get the app on Google Play for Windows">
 			</a>
 		</div>
 	</div>
 </header>
 
 <div class="app__buttons app__buttons--mobile container">
-	<a href="https://play.google.com/store/apps/details?id=com.cbt.chess_blunder_trainer" onclick="trackPlayStoreLinkClick('Visit Play Store Mobile')" class="app__button-play" target="_blank" title="Get on Google Play">
-		<img class="app__badge" src="assets/google-play-badge.png" alt="Get on Google Play">
+	<a href="https://play.google.com/store/apps/details?id=com.cbt.chess_blunder_trainer" onclick="trackPlayStoreLinkClick('Visit Play Store Android Mobile 1')" class="app__button-play" target="_blank" title="Get on Google Play">
+		<img class="app__badge" src="assets/google-play-badge.png" alt="Get the app on Google Play for Android smartphones">
 	</a>
-	<a href="https://play.google.com/store/apps/details?id=com.cbt.chess_blunder_trainer" onclick="trackPlayStoreLinkClick('Visit Play Store Windows Mobile')" class="app__button-play" target="_blank" title="Get on Google Play for Windows">
-		<img class="app__badge" src="assets/Windows_badge.png" alt="Get on Google Play for Windows">
+	<a href="https://play.google.com/store/apps/details?id=com.cbt.chess_blunder_trainer" onclick="trackPlayStoreLinkClick('Visit Play Store Windows Mobile 1')" class="app__button-play" target="_blank" title="Get on Google Play for Windows">
+		<img class="app__badge" src="assets/Windows_badge.png" alt="Get the app on Google Play for Windows">
 	</a>
 </div>
 
@@ -160,20 +160,20 @@
 </style>
 
 <div class="app__buttons app__buttons--desktop">
-	<a href="https://play.google.com/store/apps/details?id=com.cbt.chess_blunder_trainer" onclick="trackPlayStoreLinkClick('Visit Play Store Desktop')" class="app__button-play" target="_blank" title="Get on Google Play">
-		<img class="app__badge" src="assets/google-play-badge.png" alt="Get on Google Play for Android smartphones and for Windows">
+	<a href="https://play.google.com/store/apps/details?id=com.cbt.chess_blunder_trainer" onclick="trackPlayStoreLinkClick('Visit Play Store Android Desktop 2')" class="app__button-play" target="_blank" title="Get on Google Play">
+		<img class="app__badge" src="assets/google-play-badge.png" alt="Get the app on Google Play for Android smartphones">
 	</a>
-	<a href="https://play.google.com/store/apps/details?id=com.cbt.chess_blunder_trainer" onclick="trackPlayStoreLinkClick('Visit Play Store Windows Desktop')" class="app__button-play" target="_blank" title="Get on Google Play for Windows">
-		<img class="app__badge" src="assets/Windows_badge.png" alt="Get on Google Play for Windows">
+	<a href="https://play.google.com/store/apps/details?id=com.cbt.chess_blunder_trainer" onclick="trackPlayStoreLinkClick('Visit Play Store Windows Desktop 2')" class="app__button-play" target="_blank" title="Get on Google Play for Windows">
+		<img class="app__badge" src="assets/Windows_badge.png" alt="Get the app on Google Play for Windows">
 	</a>
 </div>
 
 <div class="app__buttons app__buttons--mobile container">
-	<a href="https://play.google.com/store/apps/details?id=com.cbt.chess_blunder_trainer" onclick="trackPlayStoreLinkClick('Visit Play Store Mobile')" class="app__button-play" target="_blank" title="Get on Google Play">
-		<img class="app__badge" src="assets/google-play-badge.png" alt="Get on Google Play for Android smartphones and for Windows">
+	<a href="https://play.google.com/store/apps/details?id=com.cbt.chess_blunder_trainer" onclick="trackPlayStoreLinkClick('Visit Play Store Android Mobile 2')" class="app__button-play" target="_blank" title="Get on Google Play">
+		<img class="app__badge" src="assets/google-play-badge.png" alt="Get the app on Google Play for Android smartphones">
 	</a>
-	<a href="https://play.google.com/store/apps/details?id=com.cbt.chess_blunder_trainer" onclick="trackPlayStoreLinkClick('Visit Play Store Windows Mobile')" class="app__button-play" target="_blank" title="Get on Google Play for Windows">
-		<img class="app__badge" src="assets/Windows_badge.png" alt="Get on Google Play for Windows">
+	<a href="https://play.google.com/store/apps/details?id=com.cbt.chess_blunder_trainer" onclick="trackPlayStoreLinkClick('Visit Play Store Windows Mobile 2')" class="app__button-play" target="_blank" title="Get on Google Play for Windows">
+		<img class="app__badge" src="assets/Windows_badge.png" alt="Get the app on Google Play for Windows">
 	</a>
 </div>
 
@@ -208,20 +208,20 @@
 </style>
 
 <div class="app__buttons app__buttons--desktop">
-	<a href="https://play.google.com/store/apps/details?id=com.cbt.chess_blunder_trainer" onclick="trackPlayStoreLinkClick('Visit Play Store Desktop')" class="app__button-play" target="_blank" title="Get on Google Play">
-		<img class="app__badge" src="assets/google-play-badge.png" alt="Get on Google Play for Android smartphones and for Windows">
+	<a href="https://play.google.com/store/apps/details?id=com.cbt.chess_blunder_trainer" onclick="trackPlayStoreLinkClick('Visit Play Store Android Desktop 3')" class="app__button-play" target="_blank" title="Get on Google Play">
+		<img class="app__badge" src="assets/google-play-badge.png" alt="Get the app on Google Play for Android smartphones">
 	</a>
-	<a href="https://play.google.com/store/apps/details?id=com.cbt.chess_blunder_trainer" onclick="trackPlayStoreLinkClick('Visit Play Store Windows Desktop')" class="app__button-play" target="_blank" title="Get on Google Play for Windows">
-		<img class="app__badge" src="assets/Windows_badge.png" alt="Get on Google Play for Windows">
+	<a href="https://play.google.com/store/apps/details?id=com.cbt.chess_blunder_trainer" onclick="trackPlayStoreLinkClick('Visit Play Store Windows Desktop 3')" class="app__button-play" target="_blank" title="Get on Google Play for Windows">
+		<img class="app__badge" src="assets/Windows_badge.png" alt="Get the app on Google Play for Windows">
 	</a>
 </div>
 
 <div class="app__buttons app__buttons--mobile container">
-	<a href="https://play.google.com/store/apps/details?id=com.cbt.chess_blunder_trainer" onclick="trackPlayStoreLinkClick('Visit Play Store Mobile')" class="app__button-play" target="_blank" title="Get on Google Play">
-		<img class="app__badge" src="assets/google-play-badge.png" alt="Get on Google Play for Android smartphones and for Windows">
+	<a href="https://play.google.com/store/apps/details?id=com.cbt.chess_blunder_trainer" onclick="trackPlayStoreLinkClick('Visit Play Store Android Mobile 3')" class="app__button-play" target="_blank" title="Get on Google Play">
+		<img class="app__badge" src="assets/google-play-badge.png" alt="Get the app on Google Play for Android smartphones">
 	</a>
-	<a href="https://play.google.com/store/apps/details?id=com.cbt.chess_blunder_trainer" onclick="trackPlayStoreLinkClick('Visit Play Store Windows Mobile')" class="app__button-play" target="_blank" title="Get on Google Play for Windows">
-		<img class="app__badge" src="assets/Windows_badge.png" alt="Get on Google Play for Windows">
+	<a href="https://play.google.com/store/apps/details?id=com.cbt.chess_blunder_trainer" onclick="trackPlayStoreLinkClick('Visit Play Store Windows Mobile 3')" class="app__button-play" target="_blank" title="Get on Google Play for Windows">
+		<img class="app__badge" src="assets/Windows_badge.png" alt="Get the app on Google Play for Windows">
 	</a>
 </div>
 
